; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_alloc.c_mmap_map32.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_alloc.c_mmap_map32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@LJ_ALLOC_MMAP32_START = common dso_local global i64 0, align 8
@MMAP_PROT = common dso_local global i32 0, align 4
@MAP_32BIT = common dso_local global i32 0, align 4
@MMAP_FLAGS = common dso_local global i32 0, align 4
@MFAIL = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @mmap_map32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mmap_map32(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i32, i32* @errno, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i64, i64* @LJ_ALLOC_MMAP32_START, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = load i64, i64* %2, align 8
  %9 = load i32, i32* @MMAP_PROT, align 4
  %10 = load i32, i32* @MAP_32BIT, align 4
  %11 = load i32, i32* @MMAP_FLAGS, align 4
  %12 = or i32 %10, %11
  %13 = call i8* @mmap(i8* %7, i64 %8, i32 %9, i32 %12, i32 -1, i32 0)
  store i8* %13, i8** %4, align 8
  %14 = load i32, i32* %3, align 4
  store i32 %14, i32* @errno, align 4
  %15 = load i8*, i8** %4, align 8
  ret i8* %15
}

declare dso_local i8* @mmap(i8*, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
